# program_starter

./: CMakeLists.txt  program_starter.c
ipc_system/: decoder.c  decoder.h
program_test/: program.cpp  program_2.cpp
shm_system/: utils.c  utils.h
theLib/: theLib.cpp  theLib.hpp
thetheLib/: thetheLib.cpp  thetheLib.hpp
